<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Carbohydrates Calculator</string>
    <string name="app_ver">2.14</string>
    <string name="CarbProc">% of Carbs</string>
    <string name="GrossWeigth">Weight (gr.)</string>
    <string name="CalcField">Calc.Field</string>
    <string name="setup_name">Setup of Simple Carbohydrates Calculator</string>
    <string name="edit_name">Edit the product</string>
    <string name="add_name">Add a product</string>
    <string name="export_name">Export Configuration</string>
    <string name="import_name">Import Configuration</string>
    <string name="CarbUnitsToShow">Carbohydrates units</string>
    <string name="CarbUnitsToShowSum">Units to show Carbohydrates amount</string>
    <string name="LanguageToShowProducts">Product\'s language</string>
    <string name="LanguageToShowProductsSum">Language to show Products names</string>
    <string name="LanguageOfApplication">Language of application</string>
    <string name="LanguageOfApplicationSum">(need manual restart to be in force))</string>
    <string name="ExitToChangeLang">Exit to change application language.</string>
    <string-array name="UnitChoose">
        <item >1gr.</item>
        <item >Unit 10gr.</item>
        <item >Unit 12gr.</item>
    </string-array>
    <string-array name="UnitValues">
        <item >0</item>
        <item >1</item>
        <item >2</item>
    </string-array>
    <string-array name="UnitName">
        <item >Carb.,gr.</item>
        <item >Carb.,Units(10)</item>
        <item >Carb.,Units(12)</item>
    </string-array>
    <string-array name="AppLang">
        <item >Default</item>
        <item >en English</item>
        <item >ru Russian</item>
        <item >uk Ukrainian</item>
    </string-array>
    <string-array name="AppLangVal">
        <item >default</item>
        <item >en</item>
        <item >ru</item>
        <item >uk</item>
    </string-array>
    <string name="MenuSetup">Setup</string>
    <string name="MenuAbout">About</string>
    <string name="MenuBackup">Backup</string>
    <string name="MenuExport">Export</string>
    <string name="MenuShare">Share</string>
    <string name="MenuCheck">Check</string>
    <string name="MenuImport">Import</string>
    <string name="MenuRestoreBackup">Restore Backup</string>
    <string name="About">calculates one of its three parameters by other two.</string>
    <string name="ProductAdd">Add a product</string>
    <string name="ProductEdit">Edit a product</string>
    <string name="Language">Language</string>
    <string name="ProductName">Product name</string>
    <string name="BackupDoneTo">Backup done to the file \'%s\.</string>
    <string name="RestoreBackupWarn">Current configuration will be lost."</string>
    <string name="RemoveProduct">Product \'%s\' will be removed.</string>
    <string name="File">File</string>
    <string name="Units">Units</string>
    <string name="Languages">Languages</string>
    <string name="Products">Products</string>
    <string name="AllProducts">All Products</string>
    <string name="AllConfig">All Lines</string>
    <string name="ExportFailure">Failure of export to the file \'%s\'.</string>
    <string name="ExportSuccess">File \'%s\' is written.</string>
    <string name="FileImportSource">File import source:</string>
    <string name="FileImportInternal">Internal</string>
    <string name="FileImportFile">File</string>
    <string name="FileImportClip">Clipboard</string>
    <string name="BackupPlacer">-backup-</string>
    <string name="LangLine">Lang.:</string>
    <string name="ProdLine">Prod.:</string>
    <string name="ImportFailure">Import Failure.</string>
    <string name="ImportSuccess">Import Success.</string>
</resources>