<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioExportType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/MenuExport" />

        <RadioButton
            android:id="@+id/backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MenuBackup" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/File" />

    <EditText
        android:id="@+id/exportFile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/exportUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Units" />

        <CheckBox
            android:id="@+id/exportLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Languages" />

        <CheckBox
            android:id="@+id/exportProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Products" />

    </LinearLayout>

    <Button
        android:id="@+id/doExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MenuExport" />

</LinearLayout>